styles: note title spacing corrected

--- a/src/app/modules/notes/components/note-create/note-create.component.css
+++ b/src/app/modules/notes/components/note-create/note-create.component.css
@@ -1,13 +1,8 @@
 
-/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card {
   margin-bottom: 1.5em;
 }
 
 mat-form-field, textarea {
   width: 100%;
-}
-
-button[type="submit"] {
-  margin-top: 1rem;
 }
